## NEWS to package MKmisc
###############################################################################

###########################################################
## Version 1.2
###########################################################
- added as.numeric in the computation of AUC to avoid integer overflow as
  reported by Mike Harwood

###########################################################
## Version 1.1
###########################################################
- added new function glog, glog10, glog2, inv.glog, inv.glog10, inv.glog2 to
  compute the generalized logarithm and its inverse
- added new function melt.long to transform a data.frame form wide to long
  form
- added new functions to scale axes in ggplot2 plots by glog and neglog
- extended function perfMeasures by argument cutoff, predictions are no longer
  restricted to [0,1]
- added new function optCutoff to compute optimal cutoff for various performance
  measures for binary classification

###########################################################
## Version 1.0
###########################################################
- added a vignette

###########################################################
## Version 0.999
###########################################################
- added new function perfMeasures to compute various performance measures
  for binary classification
- added new function thyroid for plotting TSH, fT3, fT4
- removed upper bound n = 100 in modified wilson confidence interval
  (thanks to Andri Signorell for detecting this inconsistency)

###########################################################
## Version 0.998
###########################################################
- extended function normCI - now mean or sd can be known
- added print function for confidence intervals

###########################################################
## Version 0.997
###########################################################
- added function risks to compute RR, OR, etc.