@@ -1,6 +1,6 @@
 Package: MKmisc
 Version: 1.2
-Date: 2018-11-09
+Date: 2018-12-10
 Title: Miscellaneous Functions from M. Kohl
 Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
                   email = "Matthias.Kohl@stamats.de", 
