@@ -35,6 +35,7 @@ export(simCorVars,
        normCI,
        power.diagnostic.test,
        power.nb.test,
+       power.welch.t.test,
        AUC,
        AUC.test,
        binomCI,
